# pfa_bvc

./: .gitignore  CLAUDE.md  analyze_features.py  analyze_schema.py
Dashboard/: app.py  db.py  requirements.txt
Dashboard/pages/: 1_Overview.py  2_Runs.py  3_Live.py  4_Stock_Prices.py
Dashboard_Analytics/: app.py  db.py  requirements.txt  theme.py
Dashboard_Analytics/.streamlit/: config.toml
Dashboard_Analytics/pages/: 1_Market_Overview.py  2_Company_Deep_Dive.py  3_Sentiment_vs_Price.py  4_Events_and_Sectors.py
Data/: companies.csv  companies_detail.csv  companies_research.json
Data/stock_history/: ADH - Données Historiques.csv  ADI - Données Historiques.csv  AFI - Données Historiques.csv  AFM - Données Historiques.csv  AGM - Données Historiques.csv  AKT - Données Historiques.csv  ARD - Données Historiques.csv  ATH - Données Historiques.csv  ATL - Données Historiques.csv  ATW - Données Historiques.csv  BAL - Données Historiques.csv  BCI - Données Historiques.csv  BCP - Données Historiques.csv  BOA - Données Historiques.csv  CDM - Données Historiques.csv  CFG - Données Historiques.csv  CIH - Données Historiques.csv  CMA - Données Historiques.csv  CMT - Données Historiques.csv  COL - Données Historiques.csv  CRS - Données Historiques.csv  CTM - Données Historiques.csv  DHO - Données Historiques.csv  DLM - Données Historiques.csv  DRI - Données Historiques.csv  DWY - Données Historiques.csv  DYT - Données Historiques.csv  FBR - Données Historiques.csv  GAZ - Données Historiques.csv  HPS - Données Historiques.csv  IAM - Données Historiques.csv  IMO - Données Historiques.csv  INV - Données Historiques.csv  LBV - Données Historiques.csv  LES - Données Historiques.csv  M2M - Données Historiques.csv  MAB - Données Historiques.csv  MDP - Données Historiques.csv  MLE - Données Historiques.csv  MOX - Données Historiques.csv  (+18 more)
Notebooks/: embed_articles.ipynb  exp.ipynb  masi_banques.ipynb
Pipelines/: .dockerignore  Dockerfile  embed_articles.ipynb  exp.ipynb  pyproject.toml
Pipelines/agents/: agent.py
Pipelines/comodities/: commodity_ingestion.py
Pipelines/config/: rss_feeds.yaml  search_config.yaml
Pipelines/data/: companies.csv  companies_research.json  lematin_companies.json  masi_banques.csv
Pipelines/db/: db.py  pg_loader.py
Pipelines/db/sql/: create_bkam_rates.sql  create_stock_prices_daily.sql  schema.sql  upsert_article.sql  upsert_article_event.sql  upsert_article_person.sql  upsert_bkam_rate.sql  upsert_commodity.sql  upsert_company.sql  upsert_company_mention.sql  upsert_event.sql  upsert_event_company.sql  upsert_feed.sql  upsert_person.sql  upsert_person_company.sql  upsert_sector_mention.sql  upsert_sentiment.sql  upsert_stock_price.sql  upsert_stock_price_daily.sql
Pipelines/gold/: extractors.py  features.py  loader.py  pipeline.py
Pipelines/monitoring/: __init__.py  logger.py
Pipelines/rss/: analyzer.py  models.py  neo4j_loader.py  pipeline.py  rss_fetcher.py  sentiment.py
Pipelines/scrapers/: bkam_pg_pipeline.py  bkam_settings.py  pg_pipeline.py  pipelines.py  settings.py  stock_settings.py
Pipelines/scrapers/misc/: currencies.py
Pipelines/scrapers/spiders/: ammc_spider.py  bkam_spider.py  lematin_spider.py
backfill/: CORRELATION_PLAN.md  ingest.py  pyproject.toml
backfill/cdx_harvester/: __init__.py  cdx_common.py  dashboard.html  dashboard.py  log.py  run.py
backfill/cdx_harvester/domains/: __init__.py  challenge.py  finances_news.py  hespress_fr.py  lavieeco.py  leconomiste.py  lematin.py  leseco.py  medias24.py
report/: bibliographie.bib  conclusion_generale.qmd  main.docx  main.qmd
report/frontmatter/: resume.qmd  (+4 more)
services/: docker-compose.yml
(+104 files in other folders)
