[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "bvcscrap>=0.2.1",
    "feedparser>=6.0.11",
    "html5lib>=1.1",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.8",
    "minio>=7.2.0",
    "requests>=2.32.0",
    "neo4j>=6.1.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scrapy>=2.14.2",
    "scrapy-playwright>=0.0.46",
    "tavily-python>=0.7.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rss", "db", "agents", "scrapers", "monitoring"]
