[project]
name = "cdx-harvester"
version = "0.1.0"
description = "Wayback CDX harvester for French-language Moroccan news outlets"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyarrow>=17",
    "tenacity>=9",
    "selectolax>=0.3.21",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cdx_harvester"]

[project.scripts]
cdx-harvest = "cdx_harvester.run:app"
cdx-dashboard = "cdx_harvester.dashboard:main"
